# DjangoHerokuDeployment

./: README.md  pyproject.toml  requirements.txt
