[tool.poetry]
name = "djangoherokudeploy"
version = "0.1.0"
description = ""
authors = ["JCamyre <JWcamry03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
